<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/dark_gray"
        card_view:cardCornerRadius="12dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/front_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/repository_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/repository_photo"
                    android:maxWidth="100dp"
                    android:maxHeight="110dp"
                    android:minWidth="100dp"
                    android:minHeight="110dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_launcher_background"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/stars"
                    style="@style/text_bold"
                    android:text="@string/stars"
                    card_view:layout_constraintBottom_toBottomOf="@+id/stars_content"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="@+id/stars_content" />

                <TextView
                    android:id="@+id/stars_content"
                    style="@style/text_normal"
                    android:layout_marginTop="8dp"
                    card_view:layout_constraintBottom_toTopOf="@+id/forks_content"
                    card_view:layout_constraintStart_toEndOf="@+id/stars"
                    card_view:layout_constraintTop_toBottomOf="@+id/repository_photo"
                    tools:text="50" />

                <TextView
                    android:id="@+id/forks"
                    style="@style/text_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forks"
                    card_view:layout_constraintBottom_toBottomOf="@+id/forks_content"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="@+id/forks_content" />

                <TextView
                    android:id="@+id/forks_content"
                    style="@style/text_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    card_view:layout_constraintBottom_toTopOf="@+id/author_content"
                    card_view:layout_constraintStart_toEndOf="@+id/forks"
                    card_view:layout_constraintTop_toBottomOf="@+id/stars_content"
                    tools:text="20" />

                <TextView
                    android:id="@+id/author"
                    style="@style/text_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author"
                    card_view:layout_constraintBottom_toBottomOf="@+id/author_content"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="@+id/author_content" />

                <TextView
                    android:id="@+id/author_content"
                    style="@style/text_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    card_view:layout_constraintBottom_toTopOf="@+id/repository_content"
                    card_view:layout_constraintStart_toEndOf="@+id/author"
                    card_view:layout_constraintTop_toBottomOf="@+id/forks_content"
                    tools:text="Gustavo" />

                <TextView
                    android:id="@+id/repository"
                    style="@style/text_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repository_name"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="@+id/repository_content" />

                <TextView
                    android:id="@+id/repository_content"
                    style="@style/text_normal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    card_view:layout_constraintBottom_toTopOf="@+id/description_btn"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toEndOf="@+id/repository"
                    card_view:layout_constraintTop_toBottomOf="@+id/author_content"
                    tools:text="Android" />

                <Button
                    android:id="@+id/description_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/mustard"
                    android:text="@string/more_about_it"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@+id/repository_content" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</FrameLayout>
